# tau-assignment

./: .env.example  .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
.cache/: pipeline_results.json
data/fixtures/: metadata.json
data/fixtures/articles/: 01_stg_logistics_bankruptcy.txt  02_houthi_attack_true_confidence.txt  03_us_port_strike.txt  04_halliburton_revenue_miss.txt  05_jb_hunt_slight_decline.txt  06_houthis_end_attacks.txt  07_red_sea_modest_impact.txt  08_red_sea_full_escalation.txt  09_us_port_strike_resolved.txt  10_panama_canal_drought.txt
pipeline/: pipeline.py
scripts/: fetch_fixtures.py  generate_baseline.py
test-results/: results.md  results.xml  results_20260628_180455.md  results_20260628_180632.md
tests/: conftest.py  test_metamorphic.py  test_regression.py  test_semantic.py  test_structural.py
